# smart-ambulance-dispatch-rl

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
models/ppo_easy_logs/: evaluations.npz
models/ppo_easy_tb/PPO_1/: events.out.tfevents.1775249319.Acer-ALG-AL15G-53.21440.0
models/ppo_easy_tb/PPO_2/: events.out.tfevents.1775249554.Acer-ALG-AL15G-53.3772.0
models/ppo_hard_logs/: evaluations.npz
models/ppo_hard_tb/PPO_1/: events.out.tfevents.1775250047.Acer-ALG-AL15G-53.24704.0
models/ppo_medium_logs/: evaluations.npz
models/ppo_medium_tb/PPO_1/: events.out.tfevents.1775249711.Acer-ALG-AL15G-53.25536.0
server/: app.py
src/: __init__.py  env.py  grader.py  inference.py  train.py
