[project]
name = "smart-ambulance-dispatch-rl"
version = "0.1.0"
description = "Ambulance dispatch RL system"
authors = [{ name = "Sahaj" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "gradio",
    "numpy",
    "python-dotenv",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"